--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,3 +19,5 @@ SEARCH_PATH=X
 GOOGLE_CLOUD_STORAGE_BUCKET=x
 GOOGLE_CLOUD_STORAGE_PROJECT=x
 GOOGLE_CLOUD_STORAGE_KEYFILE=x
+
+UPDATE_USER_SECRET=secret
