--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:ci": "jest --ci --coverage --reporters=default --reporters=jest-junit --maxWorkers=4",
+    "test:ci": "jest --ci --runInBand --coverage --reporters=default --reporters=jest-junit",
     "upgrade-interactive": "npm-check --update",
     "fetch-ai-completions": "node ./dist/bin/fetchAiCompletions.js",
     "fetch-organizations": "node ./dist/bin/importOrganizations.js",
