--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,17 +22,18 @@ jobs:
       - image: circleci/node:14
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - node-root-{{ .Branch }}-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
-            - node-root-{{ .Branch }}
-      - run:
-          name: "Install dependencies"
-          command: "[ ! -d node_modules ] && npm ci --loglevel warn --yes || echo package.json and package-lock.json unchanged. Using cache."
-      - save_cache:
-          key: node-root-{{ .Branch }}-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
-          paths:
-            - node_modules
+      - node/install-packages
+      # - restore_cache:
+      #     keys:
+      #       - node-root-{{ .Branch }}-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
+      #       - node-root-{{ .Branch }}
+      # - run:
+      #     name: "Install dependencies"
+      #     command: "[ ! -d node_modules ] && npm ci --loglevel warn --yes || echo package.json and package-lock.json unchanged. Using cache."
+      # - save_cache:
+      #     key: node-root-{{ .Branch }}-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
+      #     paths:
+      #       - node_modules
       - run:
           name: "Check code style"
           command: "bin/check-code-style.sh"
@@ -73,11 +74,11 @@ jobs:
     steps: 
       - checkout:
           path: ~/project
-      - setup_remote_docker:
-          version: 19.03.13
+      # - setup_remote_docker:
+      #     version: 19.03.13
       - jq/install
-      - docker/install-docker-tools:
-          docker-compose-version: 1.29.2
+      # - docker/install-docker-tools:
+      #     docker-compose-version: 1.29.2
       - run:
           name: "Install psql client"
           command: |
@@ -90,18 +91,19 @@ jobs:
           name: "Create extensions"
           command: | 
             psql -d circle_test -U root -p 5432 -h localhost -c "CREATE EXTENSION IF NOT EXISTS \"uuid-ossp\";"
-      - restore_cache:
-          keys:
-            - node-backend-{{ .Branch }}-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
-            - node-backend-{{ .Branch }}
-            - node-backend
-      - run:
-          name: "Install dependencies"
-          command: "[ ! -d node_modules ] && npm ci --loglevel warn --yes || echo package.json and package-lock.json unchanged. Using cache."
-      - save_cache:
-          key: node-backend-{{ .Branch }}-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
-          paths:
-            - node_modules
+      - node/install-packages
+      # - restore_cache:
+      #     keys:
+      #       - node-backend-{{ .Branch }}-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
+      #       - node-backend-{{ .Branch }}
+      #       - node-backend
+      # - run:
+      #     name: "Install dependencies"
+      #     command: "[ ! -d node_modules ] && npm ci --loglevel warn --yes || echo package.json and package-lock.json unchanged. Using cache."
+      # - save_cache:
+      #     key: node-backend-{{ .Branch }}-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
+      #     paths:
+      #       - node_modules
       - run:
           name: "Set environment"
           command: |
@@ -191,8 +193,8 @@ jobs:
       - setup_remote_docker:
           version: 19.03.13
       - jq/install
-      - docker/install-docker-tools:
-          docker-compose-version: 1.29.2
+      # - docker/install-docker-tools:
+      #     docker-compose-version: 1.29.2
       - run:
           name: "Build backend image"
           command: "bin/build-docker-backend.sh"
