--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,7 +143,7 @@ jobs:
     working_directory: ~/project/backend
     steps: 
       - attach_workspace:
-          at: .
+          at: /tmp/backend-tests
       - run:
           name: "Install psql client"
           command: |
@@ -177,7 +177,7 @@ jobs:
           path: ./coverage/jest
           destination: backend-tests
       - persist_to_workspace:
-          root: .
+          root: /tmp/backend-tests
           paths:
             - coverage
       # - run:
@@ -189,7 +189,7 @@ jobs:
     working_directory: ~/project/backend
     steps:
       - attach_workspace:
-          at: .
+          at: /tmp/backend-tests
       - run:
           name: "Upload test results"
           command: |
@@ -210,9 +210,9 @@ jobs:
           name: "Build backend image"
           command: "bin/build-docker-backend.sh"
       - persist_to_workspace:
-          root: .
+          root: /tmp/backend-build
           paths:
-            - ./backend
+            - .
 
   push_backend:
     executor: backend_build
@@ -220,7 +220,7 @@ jobs:
     #  - image: eu.gcr.io/moocfi-public/cloud-sdk-node:latest
     steps:
       - attach_workspace:
-          at: ./backend
+          at: /tmp/backend-build
       - run:
           name: "Push image if on master/staging"
           command: "bin/push-docker-backend-image.sh"
